# mise

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Makefile  PLAN.md  README.md  installer.iss  main.py  mise.spec  pyproject.toml  refactor-notes.md  requirements.txt  setup.py
.github/workflows/: release.yml
data/: mise.psd
docs/: BUILDING.md  code_style.md  mise.app.html  mise.app_controller.html  mise.database.html  mise.main_window.html  mise.metadata.html  mise.project_init.html  mise.utils.file_io.html  mise.utils.gen_utils.html  mise.utils.html  mise.utils.import_service.html  mise.utils.logging_config.html  mise.utils.paths.html  mise.utils.project_repository.html  mise.utils.settings.html  mise.utils.text_processing.html
examples/example-transcripts/: January 10, 2017- Farewell Address to the Nation.doc  January 10, 2017- Farewell Address to the Nation.docx  January 10, 2017- Farewell Address to the Nation.txt  January 12, 2016- 2016 State of the Union Address.txt  July 19, 2013- Remarks on Trayvon Martin.md  May 1, 2011- Remarks on the Death of Osama Bin Laden.txt  November 4, 2008- Remarks on Election Night.md  (+1 more)
mise/: code_manager.py  code_picker.py  code_window.py  data_manager.py  database.py  document_viewer.py  main_window.py  project_init.py  project_manager.py  project_window.py
mise/utils/: file_io.py  (+2 more)
scripts/: build-macos.sh  build-windows.bat  dev-macos.sh  dev-windows.bat
test_files/: sample.docx  sample.md
tests/: test_coding.py  test_document_loading.py  test_project_repository.py  test_text_processing.py
(+43 files in other folders)
