[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mise-qda"
version = "0.1.2"
description = "Mise: pen-source QDA tool (0.1.2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPLv3" }
authors = [
  { name = "Timothy Elder" }
]

dependencies = [
  "Markdown>=3.7,<4.0",
  "pdfplumber>=0.9,<0.10",
  "PySide6>=6.9,<7.0",
  "python-docx>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "pyinstaller",
]

[project.scripts]
mise = "mise.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mise" = ["assets/*"]